--- a/index.html
+++ b/index.html
@@ -2,180 +2,275 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="CSS/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Divya Kawale | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+
 </head>
 
 <body>
-    <!-- Header Section -->
-    <header class="header">
-        <div class="container">
-            <div class="logo">
-                <a href="#">SMARTWATCH</a>
+  <!-- Header Section -->
+  <header>
+    <nav>
+      <div class="logo"><span>Divya </span>Portfolio</div>
+      <ul class="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#resume">Resume</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Home Section -->
+  <section id="home" class="home">
+    <div class="home-content">
+      <h2>Hello</h2>
+      <h1>I'm Divya Kawale</h1>
+      <h3>And I'm a <span>FrontEnd Developer</span></h3>
+      <p>Welcome to my FrontEnd Developer portfolio! I'm Divya, a skilled and creative frontend developer with a
+        passion for creating beautiful, responsive, and user-friendly websites.</p>
+
+
+      <div class="social-icons">
+        <a href="#"><i class='bx bxl-facebook'></i></a>
+        <a href="#"><i class='bx bxl-instagram'></i></a>
+        <a href="#"><i class='bx bxl-twitter'></i></a>
+        <a href="#"><i class='bx bxl-linkedin'></i></a>
+
+      </div>
+    </div>
+    <div class="home-image">
+      <img src="images/divi1.jpg" alt="Divya Kawale">
+    </div>
+  </section>
+
+  <!-- About Section -->
+
+  <section class="about-container">
+    <div class="about-image">
+      <img src="images/divi2.jpg" alt="Divya Kawale">
+    </div>
+
+    <div class="about-content">
+
+      <h1>About<span> Me</span></h1>
+
+
+      <h3> I'm a <span>FrontEnd Developer</span></h3>
+      <p>Hi, I'm Divya, a passionate Frontend Developer with a keen eye for detail and a love for creating
+        visually stunning and user-friendly websites. With a strong foundation in HTML, CSS JavaScript, and the
+        Bootstrap framework,I specialize in building responsive and interactive web experiences.My background in
+        Java also complements my frontend skills,allowing me tointegrate complex functionalities seamlessly. I'm
+        dedicated to staying updated with the latest trends and technologies to deliver innovative and
+        high-quality solutions.</p>
+
+
+      <a href="#" class="read-more-btn">Read More</a>
+
+
+    </div>
+
+    </div>
+  </section>
+
+
+
+  <!-- Skills Section -->
+
+  <div class="skills-container">
+    <h2>My <span>Skills</span></h2>
+    <br><br>
+    <div class="skills-content">
+      <!-- Technical Skills -->
+      <div class="technical-skills">
+        <h3>Technical Skills</h3>
+        <div class="skill-bar">
+          <div class="skill">
+            <span>HTML</span>
+            <div class="progress-bar">
+              <div class="progress html"></div>
             </div>
-            <nav class="nav">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Models</a></li>
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#" class="buy-now">Buy Now</a></li>
-                </ul>
-            </nav>
+          </div>
+          <div class="skill">
+            <span>CSS</span>
+            <div class="progress-bar">
+              <div class="progress css"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>JavaScript</span>
+            <div class="progress-bar">
+              <div class="progress javascript"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Java</span>
+            <div class="progress-bar">
+              <div class="progress python"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>Bootstrap</span>
+            <div class="progress-bar">
+              <div class="progress java"></div>
+            </div>
+          </div>
         </div>
-    </header>
+      </div>
 
-    <!-- Main Banner Section -->
-    <section class="banner">
-        <div class="container">
-            <div class="banner-content">
-                <h1>Track your Fitness , Monitor your health , and Stay connected with the world - All from your wrist
-                </h1>
-
-                <p>Introducing the ultimate smartwatch that combines style, functionality,
-                    and cutting-edge technology.</p>
-                <br>
-                <a href="#" class="cta">Order Now</a>
-                <a href="#" class="cta-secondary">Learn More</a>
-            </div>
-            <div class="banner-image">
-                <img src="images/b1.jpg" alt="Smartwatch" class="watch-img">
-            </div>
+      <!-- Professional Skills -->
+      <div class="professional-skills">
+        <h3>Professional Skills</h3>
+        <div class="circular-skill">
+          <div class="circle">
+            <div class="inner"></div>
+            <div class="outer"></div>
+            <div class="numb">90%</div>
+            <div class="skill-name">Creativity</div>
+          </div>
+          <div class="circle">
+            <div class="inner"></div>
+            <div class="outer"></div>
+            <div class="numb">85%</div>
+            <div class="skill-name">Communication</div>
+          </div>
+          <div class="circle">
+            <div class="inner"></div>
+            <div class="outer"></div>
+            <div class="numb">75%</div>
+            <div class="skill-name">Problem-Solving</div>
+          </div>
+          <div class="circle">
+            <div class="inner"></div>
+            <div class="outer"></div>
+            <div class="numb">92%</div>
+            <div class="skill-name">Teamwork</div>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 
 
-    <!-- feature heading -->
-    <h2 id="feature-heading">Models</h2>
-
-    <!-- Features Section -->
-    <section class="features">
-        <div class="container">
+  <!-- Projects Section -->
 
 
-            <div class="feature">
+  <section id="projects" class="projects-section">
+    <div class="container">
+      <h2 class="section-title">My <span>Projects</span></h2>
+      <br><br>
+      <div class="projects">
 
-                <img src="images/m1.jpg" alt="Smartwatch 1" class="feature-img">
-                <h3>Apple Watch Series 8</h3>
 
-                <p>Price: ₹15,999</p>
-            </div>
-            <div class="feature">
-                <img src="images/m2.jpg" alt="Smartwatch 2" class="feature-img">
-                <h3>Samsung Galaxy Watch 6</h3>
-                <p>Price: ₹12,999</p>
-            </div>
-            <div class="feature">
-                <img src="images/m3.jpg" alt="Smartwatch 3" class="feature-img">
-                <h3>Fitpulse Watch 360</h3>
-                <p>Price: ₹10,999</p>
-            </div>
-            <div class="feature">
-                <img src="images/m4.jpg" alt="Smartwatch 3" class="feature-img">
-                <h3>Fitbit Versa Watch 4</h3>
-                <p>Price: ₹9,599 </p>
-            </div>
-
-            <div class="feature">
-                <img src="images/m5.jpg" alt="Smartwatch 3" class="feature-img">
-                <h3>Amazbit GTR Watch 4</h3>
-                <p>Price: ₹8,999</p>
-            </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="images/s2.png" alt="Project 1">
+          </div>
+          <h3 class="project-title">AI-based Healthcare Chatbot</h3>
+          <p class="project-description">Designed an AI-based Healthcare Chatbot System that provides instant medical
+            advice and appointment scheduling. The chatbot uses natural language processing to assist users with
+            health-related queries efficiently.</p>
+          <a href="#" class="read-more-btn">Read More</a>
         </div>
-    </section>
 
 
-
-
-
-
-
-    <h2 id="feature-heading">Features</h2>
-
-    <!-- Features Section -->
-    <section class="features">
-
-        <div class="container">
-            <div class="feature">
-                <img src="images/f1.jpg" alt="Smartwatch 1" class="feature-img">
-                <h3>Fitness Tracking</h3>
-                <p>Stay Active , Stay Motivated.</p>
-            </div>
-
-            <div class="feature">
-                <img src="images/f2.jpg" alt="Smartwatch 3" class="feature-img">
-                <h3>Long Battery Life</h3>
-                <p>Power that lasts , All day & night.</p>
-            </div>
-
-            <div class="feature">
-                <img src="images/f3.jpg" alt="Smartwatch 3" class="feature-img">
-                <h3>Water Resistance</h3>
-                <p>Ready for rain , Splash or Swim.</p>
-            </div>
-
-            <div class="feature">
-                <img src="images/f4.jpg" alt="Smartwatch 2" class="feature-img">
-                <h3>Heart Rate Monitoring</h3>
-                <p>Your heart , Our Priority.</p>
-            </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="images/s1.png" alt="Project 2">
+          </div>
+          <h3 class="project-title">Tic-Tac-Toe Game</h3>
+          <p class="project-description">Developed a classic Tic-Tac-Toe game using JavaScript, featuring an interactive
+            UI and intelligent gameplay. The game allows two players to enjoy seamless and fun-filled sessions on any
+            device.</p>
+          <a href="#" class="read-more-btn">Read More</a>
         </div>
-    </section>
 
-    <!-- Features Section -->
-    <section class="features">
-        <div class="container">
-            <div class="feature">
-                <img src="images/f5.jpg" alt="Smartwatch 1" class="feature-img">
-                <h3>Sleep Tracking</h3>
-                <p>Track your Rest , Wake up Refreshed.</p>
-            </div>
-            <div class="feature">
-                <img src="images/f6.jpg" alt="Smartwatch 2" class="feature-img">
-                <h3>Notification & Alerts</h3>
-                <p>Stay Connected , Without Distractions.</p>
-            </div>
-            <div class="feature">
-                <img src="images/f7.jpg" alt="Smartwatch 3" class="feature-img">
-                <h3>Voice Assistant</h3>
-                <p>Your smart Assistant on your wrist.</p>
-            </div>
 
-            <div class="feature">
-                <img src="images/f8.jpg" alt="Smartwatch 3" class="feature-img">
-                <h3>Workout-Mode</h3>
-                <p>Workout Smarter , Not Harder , Gain Maximum.</p>
-            </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="images/s3.png" alt="Project 3">
+          </div>
+          <h3 class="project-title">Simple Calculator</h3>
+          <p class="project-description">Designed an AI-based Healthcare Chatbot System that provides instant medical
+            advice and appointment scheduling. The chatbot uses natural language processing to assist users with
+            health-related queries efficiently.</p>
+          <a href="#" class="read-more-btn">Read More</a>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
+
+
+  <br>
+  <br><br>
+  <br>
+  <br><br>
 
 
 
 
 
+  <!-- Resume Section -->
 
 
+  <section id="resume" class="resume">
+    <div class="resume-content">
+      <h2>Resume</h2>
+      <p>Download my resume to learn more about my work experience and skills.</p>
+      <a href="resume.pdf" download class="btn">Download Resume</a>
+    </div>
+  </section>
 
+  <br>
+  <br><br>
+  <br>
+  <br><br>
 
+  <!-- contact Section -->
 
-    <!-- About Us Section -->
-    <section class="about-us">
-        <h2 id="feature-heading">About</h2>
-        <div class="container">
+  <section id="contact" class="contact-section">
+    <div class="container">
+      <h2 class="contact-title">Contact <span>Me</span></h2>
 
-            <p>We are passionate about wearable technology and are committed to bringing you the best in design and
-                functionality.</p>
+      <form action="#" method="post">
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" placeholder="Enter Your Name" id="name" name="name" required>
         </div>
-    </section>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" placeholder="Enter Your Email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" rows="4" required></textarea>
+        </div>
+        <button type="submit" class="submit-btn">Send Message</button>
+      </form>
+    </div>
+  </section>
 
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2024 Smartwatch. All rights reserved.</p>
-    </footer>
-    </footer>
+
+
+
+  <!-- Footer Section -->
+  <footer>
+    <p>&copy; 2024 Divya Kawale. All rights reserved.</p>
+  </footer>
 </body>
 
 </html>
